Use homebrew_cask command

--- a/roles/casks/tasks/main.yaml
+++ b/roles/casks/tasks/main.yaml
@@ -1,5 +1,5 @@
 - name: Install brew casks
-  package:
+  homebrew_cask:
     name: "{{ item }}"
     state: present
   with_items: "{{ brew_casks }}"
