Add nerdfonts tap

--- a/roles/taps/defaults/main.yaml
+++ b/roles/taps/defaults/main.yaml
@@ -2,6 +2,7 @@ brew_taps:
   - blackfireio/blackfire
   - dldash/core
   - drud/ddev
+  - homebrew/cask-fonts
   - koekeishiya/formulae
   - platformsh/tap
   - symfony-cli/tap
