Add hb versions

--- a/roles/taps/defaults/main.yaml
+++ b/roles/taps/defaults/main.yaml
@@ -3,6 +3,7 @@ brew_taps:
   - dldash/core
   - drud/ddev
   - homebrew/cask-fonts
+  - homebrew/cask-versions
   - koekeishiya/formulae
   - platformsh/tap
   - symfony-cli/tap
